--- a/app_web/templates/task.html
+++ b/app_web/templates/task.html
@@ -29,6 +29,7 @@
             >
                 <i class="bi bi-caret-right-square-fill"></i>
             </button>
+            <span class="d-none" id="btn-stop"></span>
             <a
                     class="text-success-emphasis"
                     href="/task/{{ task.id }}/update"
