Рефакторинг UI. Убрано нижнее подчеркивание в ссылках с иконками

--- a/app_web/templates/task.html
+++ b/app_web/templates/task.html
@@ -31,7 +31,7 @@
             </button>
             <span class="d-none" id="btn-stop"></span>
             <a
-                    class="text-success-emphasis"
+                    class="icon-link text-success-emphasis"
                     href="/task/{{ task.id }}/update"
                     title="Редактировать"
             >
