--- a/app_web/templates/task_create_or_update.html
+++ b/app_web/templates/task_create_or_update.html
@@ -47,7 +47,7 @@
                 {% endif %}
         />
     </div>
-    <div class="mb-3">
+    <div class="mb-3 d-flex">
         <div class="form-check form-switch">
             <input
                     class="form-check-input"
@@ -63,6 +63,7 @@
             />
             <label for="is_enabled" class="form-label">Активный</label>
         </div>
+        <div class="p-3"></div>
         <div class="form-check form-switch">
             <input
                     class="form-check-input"
