--- a/app_web/templates/task.html
+++ b/app_web/templates/task.html
@@ -44,31 +44,34 @@
         <div>{% if task.description %}{{ task.description | safe }}{% endif %}</div>
     </div>
 
-    <div class="form-check form-switch">
-        <input
-                class="form-check-input"
-                id="is_enabled"
-                type="checkbox"
-                role="switch"
-                data-context-obj-field="is_enabled"
-                data-url-update="/api/task/{{ task.id }}/update"
-                {% if task.is_enabled %}checked{% endif %}
-        />
-        <label for="is_enabled" class="form-label">Активный</label>
+    <div class="mb-3 d-flex">
+        <div class="form-check form-switch">
+            <input
+                    class="form-check-input"
+                    id="is_enabled"
+                    type="checkbox"
+                    role="switch"
+                    data-context-obj-field="is_enabled"
+                    data-url-update="/api/task/{{ task.id }}/update"
+                    {% if task.is_enabled %}checked{% endif %}
+            />
+            <label for="is_enabled" class="form-label">Активный</label>
+        </div>
+        <div class="p-3"></div>
+        <div class="form-check form-switch">
+            <input
+                    class="form-check-input"
+                    id="is_infinite"
+                    type="checkbox"
+                    role="switch"
+                    data-context-obj-field="is_infinite"
+                    data-url-update="/api/task/{{ task.id }}/update"
+                    {% if task.is_infinite %}checked{% endif %}
+            />
+            <label for="is_infinite" class="form-label">Бесконечный</label>
+        </div>
     </div>
 
-    <div class="form-check form-switch">
-        <input
-                class="form-check-input"
-                id="is_infinite"
-                type="checkbox"
-                role="switch"
-                data-context-obj-field="is_infinite"
-                data-url-update="/api/task/{{ task.id }}/update"
-                {% if task.is_infinite %}checked{% endif %}
-        />
-        <label for="is_infinite" class="form-label">Бесконечный</label>
-    </div>
 
     <div class="mb-3">
         <label for="command" class="form-label">Команда</label>
