--- a/app_web/templates/task_create_or_update.html
+++ b/app_web/templates/task_create_or_update.html
@@ -244,5 +244,6 @@
     </div>
 </form>
 
+<script src="{{ url_for('static', filename='js/task_base.js') }}"></script>
 <script src="{{ url_for('static', filename='js/task_create_or_update.js') }}"></script>
 {% endblock %}
