--- a/app_web/templates/task.html
+++ b/app_web/templates/task.html
@@ -87,13 +87,15 @@
         <div class="row">
             <div class="col">
                 <label for="cron" class="form-label">Расписание</label>
-                <textarea
+                <input
                         class="form-control font-monospace"
                         id="cron"
-                        rows="1"
                         name="cron"
+                        {% if task.cron %}
+                        value="{{ task.cron | e }}"
+                        {% endif %}
                         disabled
-                >{% if task.cron %}{{ task.cron | e }}{% endif %}</textarea>
+                >
                 <div class="form-text">
                     <span class="cron-result-error text-danger"></span>
                 </div>
