--- a/app_web/templates/task_create_or_update.html
+++ b/app_web/templates/task_create_or_update.html
@@ -105,12 +105,14 @@
         <div class="row">
             <div class="col">
                 <label for="cron" class="form-label">Расписание</label>
-                <textarea
+                <input
                         class="form-control font-monospace"
                         id="cron"
-                        rows="1"
                         name="cron"
-                >{% if is_mode_edit and task.cron %}{{ task.cron | e }}{% endif %}</textarea>
+                        {% if is_mode_edit and task.cron %}
+                        value="{{ task.cron | e }}"
+                        {% endif %}
+                >
                 <div class="form-text">
                     <span class="cron-result-error text-danger"></span>
                 </div>
