--- a/app_web/templates/task.html
+++ b/app_web/templates/task.html
@@ -22,6 +22,7 @@
 <!--        TODO: кнопки получаются мелкими. Мб перенести их, например, в левую часть в список? -->
         <div class="align-self-center">
             <button
+                    id="btn-do-run"
                     class="btn text-success p-0"
                     title="Запуск"
                     data-url="/api/task/{{ task.id }}/do-run"
