--- a/app_web/templates/task_run.html
+++ b/app_web/templates/task_run.html
@@ -48,7 +48,7 @@
 
 <div class="mb-3">
     <label for="status" class="form-label">
-        Статус БД
+        Статус из БД
     </label>
     {# TODO: Заполнять из js #}
     <input
