--- a/app_web/templates/task.html
+++ b/app_web/templates/task.html
@@ -37,6 +37,13 @@
             >
                 <i class="bi bi-pencil-square"></i>
             </a>
+            <a
+                    class="icon-link"
+                    href="/task/{{ task.id }}/logs"
+                    title="Страница всех логов"
+            >
+                <i class="bi bi-journal-text"></i>
+            </a>
         </div>
     </div>
 
