--- a/app_web/templates/textarea-line-numbers/fragment.html
+++ b/app_web/templates/textarea-line-numbers/fragment.html
@@ -27,7 +27,7 @@
             lineNumbers: true,
             lineWrapping: true,
             theme: "darcula",
-            readOnly: el.attributes.readonly != null ? "nocursor" : false,
+            readOnly: el.attributes.readonly != null,
         };
     }
 
