Обновление UI. Поддержка перетаскивания столбцов в таблицах

--- a/app_web/templates/base.html
+++ b/app_web/templates/base.html
@@ -14,8 +14,8 @@
 
     <link rel="stylesheet" href="{{ url_for('static', filename='libs/bootstrap-icons-1.11.3/bootstrap-icons.min.css') }}">
 
-    <link rel="stylesheet" href="{{ url_for('static', filename='libs/DataTables-2.0.5/datatables.min.css') }}">
-    <script src="{{ url_for('static', filename='libs/DataTables-2.0.5/datatables.min.js') }}"></script>
+    <link rel="stylesheet" href="{{ url_for('static', filename='libs/DataTables/datatables.min.css') }}">
+    <script src="{{ url_for('static', filename='libs/DataTables/datatables.min.js') }}"></script>
 
     <!-- noty -->
     <script src="{{ url_for('static', filename='libs/jquery.noty.packaged.min.js') }}"></script>
