--- a/app_web/templates/task_run.html
+++ b/app_web/templates/task_run.html
@@ -41,6 +41,30 @@
             <i class="bi bi-stop-circle"></i>
         </button>
     </div>
+    <div class="btn-group ms-2" role="group">
+        <a
+                {% if task_run.prev_task_run %}
+                class="btn btn-secondary"
+                href="/task/{{ task_run.task.id }}/run/{{ task_run.prev_task_run.seq }}"
+                {% else %}
+                class="btn btn-secondary disabled"
+                {% endif %}
+                title="Прошлый запуск"
+        >
+            <i class="bi bi-arrow-left"></i>
+        </a>
+        <a
+                {% if task_run.next_task_run %}
+                class="btn btn-secondary"
+                href="/task/{{ task_run.task.id }}/run/{{ task_run.next_task_run.seq }}"
+                {% else %}
+                class="btn btn-secondary disabled"
+                {% endif %}
+                title="Следующий запуск"
+        >
+            <i class="bi bi-arrow-right"></i>
+        </a>
+    </div>
 </div>
 
 <div class="mb-3 row">
